--- a/eks/buildspec_plan.yml
+++ b/eks/buildspec_plan.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - cd tfcode
+      - cd eks
       - wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
       - unzip terraform_1.6.6_linux_amd64.zip
       - mv terraform /usr/local/bin/
@@ -19,4 +19,4 @@ phases:
 
 artifacts:
   files:
-    - tfcode/plan.out
+    - eks/plan.out
