--- a/eks/buildspec_apply.yml
+++ b/eks/buildspec_apply.yml
@@ -12,3 +12,7 @@ phases:
   build:
     commands:
       - terraform apply -input=false plan.out
+  
+  post_build:
+    commands:
+      - aws eks --region us-east-1 update-kubeconfig --name afsdemo
