--- a/eks/buildspec_apply.yml
+++ b/eks/buildspec_apply.yml
@@ -8,6 +8,11 @@ phases:
       - unzip terraform_1.6.6_linux_amd64.zip
       - mv terraform /usr/local/bin/
       - terraform --version
+      
+  pre_build:
+    commands:
+      - aws eks --region us-east-1 update-kubeconfig --name afsdemo || echo 0
+      - terraform init
 
   build:
     commands:
